# code-agents

./: .dockerignore  .gitignore  .graphifyignore  AGENTS.md  ARCHITECTURE.md  BRAIN.md  BUGS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CURSOR.md  FEATURES.md  GEMINI.md  LICENSE  Makefile  PENDING.md  PROJECT_OVERVIEW.md  README.md  RELEASE-NOTES.md  ROADMAP.md  bitbucket-pipelines.yml  demo_tui.py  install.sh  pyproject.toml  security.md  setup.md  stateful-plotting-lark.md
.code-agents/: .ignore  code-agents.regression-baseline.json  endpoints.example.yaml  mcp.example.yaml  review.example.yaml  sanity.example.yaml
agents/: cursor_http_example.yaml.disabled
code_agents/: __version__.py
docs/: SUPER_PROMPT_CODE_AGENTS_ARCHITECTURE.md
examples/: README-atlassian-mcp.md  atlassian_mcp_client.py
extensions/: Makefile
initiater/: README.md  run_audit.py
scripts/: graphify_by_folder.py  list_acquiring_sources.py  query_acq_order.py  run_query.py  test_jenkins.py  test_redash.py  validate_extension_repositories.py
terminal/: package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
tests/: test_acl_matrix.py  test_acquirer_health.py  test_action_log.py  test_adr_generator.py  test_agent_corrections.py  test_agent_replay.py  test_ai_review_personas.py  test_api_changelog_gen.py  test_api_compat.py  test_api_design_checker.py  test_api_doc_generator.py  test_api_docs.py  test_api_sync.py  test_app_lifespan.py  test_arch_drift_detector.py  test_arch_reviewer.py  test_argocd_client.py  test_ast_helpers.py  test_atlassian_oauth.py  test_atlassian_oauth_extra.py  test_atlassian_oauth_unit.py  test_atlassian_oauth_web.py  test_audit_orchestrator.py  test_auto_coverage.py  test_auto_observability.py  test_autonomous_coverage.py  test_backend.py  test_backend_extra.py  test_background_agent.py  test_bash_tool.py  test_batch_ops.py  test_batch_optimizer.py  test_benchmark.py  test_blame_unit.py  (+341 more)
(+1028 files in other folders)
